--- a/client/public/global.css
+++ b/client/public/global.css
@@ -61,3 +61,10 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+.content-description {
+	font-family: monospace;
+	font-weight: lighter;
+	text-decoration: italics;
+	font-style: italic;
+}
